force-app/main/default/objects/base_events_MCPProd__dll/fields/KQ_sfmcContactKey__c.field-meta.xml
<CustomField>
    <fullName>KQ_sfmcContactKey__c</fullName>
    <label>KQ_sfmcContactKey</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_sfmcContactKey</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>