force-app/main/default/objects/base_events_MCPProd__dll/fields/sourceDevice__c.field-meta.xml
<CustomField>
    <fullName>sourceDevice__c</fullName>
    <label>Source Device</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sourceDevice</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>