force-app/main/default/objects/base_events_MCPProd__dll/fields/sourceUrl__c.field-meta.xml
<CustomField>
    <fullName>sourceUrl__c</fullName>
    <label>Source URL</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sourceUrl</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>